# shortlink-gen-microservice-rust-kafka

./: Cargo.toml  docker-compose.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: main.rs
migrations/: 20250723132718_initial_schema.down.sql  20250723132718_initial_schema.up.sql
reader-service/: Cargo.toml  Dockerfile
reader-service/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
writer-service/: Cargo.toml  Dockerfile
writer-service/src/: main.rs
