[package]
name = "writer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
rdkafka = "0.38.0"
serde_json = "1.0.141"
sqlx = "0.8.6"
tokio = "1.46.1"
uuid = "1.17.0"
shared = { path = "../shared" }
log = "0.4.27"
env_logger = "0.11.8"
